--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,10 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm install
-      - run: npm run build
+      - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_INNOVAAGROTECH_BB5C1 }}
-          projectId: innovaagrotech-bb5c1
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_INNOVAAGROTECH_A5A42 }}
+          projectId: innovaagrotech-a5a42
